--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "axios": "^1.2.1",
+    "cheerio": "^1.0.0-rc.12",
     "meilisearch": "^0.30.0",
     "notyf": "^3.10.0",
     "prop-types": "^15.8.1",
